# gamejam-2021

./: Cargo.toml  README.md  ship.sh
.cargo/: config.toml
src/: level.rs  main.rs  models.rs  setup.rs  systems.rs  ui.rs
src/models/: explosion.rs  item.rs  platform.rs  player.rs  pressure_plate.rs  spikes.rs
src/systems/: collision.rs  death.rs  gravity.rs  movement.rs  plates.rs
