[package]
name = "gamejam-2021"
version = "0.1.0"
authors = ["DankDumpster <staalkoper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bevy/dynamic"]

[dependencies]
bevy = "0.4"
bevy_diagnostic = "0.4"
bevy_dylib = "0.4"

rand = "0.8.3"
log = "0.4"
simple_logger = "1.11"