[package]
name = "gamejam-2021"
version = "0.1.0"
authors = ["DankDumpster <staalkoper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "bevy/dynamic"
]

# see https://github.com/johnthagen/min-sized-rust
[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[dependencies]
bevy_diagnostic = "0.4"

rand = "0.8.3"
log = "0.4"
simple_logger = "1.11"

[dependencies.bevy]
version = "0.4.0"