[package]
name = "rusty-rocket"
version = "1.0.3"
authors = ["DankDumpster <staalkoper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

# see https://github.com/johnthagen/min-sized-rust
[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[dependencies]
rand = "0.8.3"
log = "0.4"
simple_logger = "1.11"

[dependencies.bevy]
version = "0.4.0"
git = "https://github.com/DankDumpster/bevy.git"

[dependencies.bevy_diagnostic]
version = "0.4.0"
git = "https://github.com/DankDumpster/bevy.git"